# BIMCHNA

./: .gitignore  doc_system.db  总框架.md  总框架_id_00000000_level_0_parentId_null_time_20251218_Creator_lvwan01.md
.cargo/: config.toml
.obsidian/: workspace.json
crates/: Cargo.toml
crates/ai/: AI系统.md  AI系统_id_15000000_level_1_parentId_00000000_time_20251226_Creator_lvwan01.md  Cargo.toml
crates/app/: Cargo.toml  双模架构.md
crates/app/src/: main.rs
crates/app/src/ui/: mod.rs
crates/app/src/webui/: architecture_design.md
crates/bridge/: Cargo.toml  interop_protocol.md  互操作协议.md
crates/display/: Cargo.toml  wgpu_render_pipeline.md  显示引擎.md  显示引擎_id_12000000_level_1_parentId_00000000_time_20251218_Creator_lvwan01.md  渲染管线.md
crates/display/src/: blit.wgsl  lib.rs  material.rs  picking.rs  render_graph.rs  rhi.rs  scene.rs  shader.wgsl
crates/geometry/: Cargo.toml  几何内核.md  几何内核_id_11000000_level_1_parentId_00000000_time_20251218_Creator_lvwan01.md
crates/infrastructure/: Cargo.toml  基础设施.md  基础设施_id_10000000_level_1_parentId_00000000_time_20251218_Creator_lvwan01.md
crates/interaction/: Cargo.toml  交互实现机制.md  交互系统.md  交互系统_id_13000000_level_1_parentId_00000000_time_20251218_Creator_lvwan01.md  输入系统.md  输入系统_id_13100000_level_2_parentId_13000000_time_20251226_Creator_lvwan01.md
crates/kernel/: Cargo.toml  core_logic.md  核心逻辑.md  视图控制.md  (+1 more)
crates/scripting/: architecture.md  (+1 more)
tools/: AIagent.md  AI助手指南.md  dashboard.html  debug_db.py  doc_manager.py  move_docs.py  rebuild_db.py  scan_and_register.py  server.py  update_db_settings.py  update_db_tasks.py
(+1050 files in other folders)
